--- a/environment.yml
+++ b/environment.yml
@@ -1,99 +1,103 @@
 name: spyder_HotMicro_env
 channels:
   - defaults
+  - conda-forge
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
   - https://repo.anaconda.com/pkgs/msys2
-  - conda-forge
 dependencies:
-  - aiohappyeyeballs=2.4.4
-  - aiohttp=3.11.10
-  - aiosignal=1.2.0
+  - aiodns=3.5.0
+  - aiohappyeyeballs=2.6.1
+  - aiohttp=3.12.15
+  - aiosignal=1.4.0
   - alabaster=0.7.16
-  - ansi2html=1.9.1
+  - ansi2html=1.9.2
   - aom=3.6.0
-  - arrow=1.3.0
-  - astroid=3.3.8
+  - arrow=1.4.0
+  - astroid=3.3.11
   - asttokens=3.0.0
   - async-timeout=5.0.1
   - asyncssh=2.17.0
   - atomicwrites=1.4.0
-  - attrs=24.3.0
+  - attrs=25.4.0
   - autopep8=2.0.4
   - babel=2.16.0
   - backports.tarfile=1.2.0
   - bcrypt=4.3.0
-  - beautifulsoup4=4.13.4
+  - beautifulsoup4=4.13.5
   - binaryornot=0.4.4
-  - black=25.1.0
+  - black=25.9.0
   - blas=1.0
   - bleach=6.2.0
   - blinker=1.9.0
-  - bottleneck=1.4.2
   - brotli-python=1.0.9
   - brotlicffi=1.0.9.2
   - bzip2=1.0.8
-  - ca-certificates=2025.7.15
-  - cairo=1.16.0
-  - certifi=2025.8.3
-  - cffi=1.17.1
-  - chardet=4.0.0
-  - charset-normalizer=3.3.2
-  - click=8.1.8
+  - c-ares=1.34.5
+  - ca-certificates=2025.9.9
+  - cairo=1.18.4
+  - cattrs=25.3.0
+  - certifi=2025.10.5
+  - cffi=2.0.0
+  - chardet=5.2.0
+  - charset-normalizer=3.4.4
+  - click=8.2.1
   - cloudpickle=3.1.1
   - colorama=0.4.6
   - comm=0.2.1
   - contourpy=1.3.1
   - cookiecutter=2.6.0
-  - cryptography=45.0.5
+  - cryptography=46.0.3
   - cycler=0.11.0
   - dash=2.14.2
   - dav1d=1.2.1
-  - debugpy=1.8.11
-  - decorator=5.1.1
+  - debugpy=1.8.16
+  - decorator=5.2.1
   - defusedxml=0.7.1
-  - deprecated=1.2.13
+  - deprecated=1.2.18
   - diff-match-patch=20200713
-  - dill=0.3.8
-  - docstring-to-markdown=0.11
+  - dill=0.4.0
+  - docstring-to-markdown=0.17
   - docutils=0.21.2
-  - exceptiongroup=1.2.0
-  - executing=0.8.3
+  - exceptiongroup=1.3.0
+  - executing=2.2.1
   - expat=2.7.1
   - flake8=7.1.1
   - flask=3.0.3
   - flask-compress=1.17
-  - fontconfig=2.14.1
-  - fonttools=4.55.3
+  - fontconfig=2.15.0
+  - fonttools=4.60.1
   - freeglut=3.4.0
   - freetype=2.13.3
   - fribidi=1.0.10
-  - frozenlist=1.5.0
-  - git=2.45.2
+  - frozenlist=1.8.0
+  - fzf=0.55.0
+  - git=2.51.0
   - graphite2=1.3.14
   - h5py=3.14.0
   - harfbuzz=10.2.0
   - hdf5=1.14.5
   - icc_rt=2022.1.0
   - icu=73.1
-  - idna=3.7
+  - idna=3.11
   - imageio=2.37.0
   - imagesize=1.4.1
   - importlib-metadata=8.5.0
   - inflection=0.5.1
-  - intel-openmp=2023.1.0
+  - intel-openmp=2025.0.0
   - intervaltree=3.1.0
-  - ipykernel=6.29.5
+  - ipykernel=6.30.1
   - ipython=8.30.0
-  - isort=6.0.1
+  - ipython_pygments_lexers=1.1.1
+  - isort=6.1.0
   - itsdangerous=2.2.0
-  - jaraco.classes=3.2.1
+  - jaraco.classes=3.4.0
   - jaraco.context=6.0.0
   - jaraco.functools=4.1.0
   - jedi=0.19.2
   - jellyfish=1.1.3
   - jinja2=3.1.6
-  - jpeg=9e
+  - jpeg=9f
   - jsonschema=4.25.0
   - jsonschema-specifications=2023.7.1
   - jupyter_client=8.6.3
@@ -110,41 +114,45 @@ dependencies:
   - libclang13=14.0.6
   - libdeflate=1.22
   - libffi=3.4.4
-  - libglib=2.84.2
+  - libglib=2.84.4
   - libiconv=1.16
-  - libpng=1.6.39
-  - libpq=17.4
-  - libsodium=1.0.18
-  - libspatialindex=1.9.3
+  - libkrb5=1.21.3
+  - libopenjpeg=2.5.4
+  - libpng=1.6.50
+  - libpq=17.6
+  - libsodium=1.0.20
+  - libspatialindex=2.1.0
   - libtiff=4.7.0
+  - libuv=1.48.0
   - libwebp-base=1.3.2
-  - libxml2=2.13.8
+  - libxml2=2.13.9
+  - lsprotocol=2025.0.0
   - lz4-c=1.9.4
   - m2w64-gcc-libgfortran=5.3.0
   - m2w64-gcc-libs=5.3.0
   - m2w64-gcc-libs-core=5.3.0
   - m2w64-gmp=6.1.0
   - m2w64-libwinpthread-git=5.0.0.4634.697f757
-  - markdown-it-py=2.2.0
+  - markdown-it-py=4.0.0
   - markupsafe=3.0.2
-  - matplotlib=3.10.0
-  - matplotlib-base=3.10.0
-  - matplotlib-inline=0.1.6
+  - matplotlib=3.10.6
+  - matplotlib-base=3.10.6
+  - matplotlib-inline=0.1.7
   - mccabe=0.7.0
-  - mdurl=0.1.0
+  - mdurl=0.1.2
   - mistune=3.1.2
-  - mkl=2023.1.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.11
-  - mkl_random=1.2.8
-  - more-itertools=10.3.0
+  - mkl=2025.0.0
+  - mkl-service=2.5.2
+  - mkl_fft=2.1.1
+  - mkl_random=1.3.0
+  - more-itertools=10.8.0
   - mpi=1.0
   - mpi4py=4.0.3
   - msmpi=10.1.1
   - msys2-conda-epoch=20160418
-  - multidict=6.1.0
+  - multidict=6.7.0
   - mypy_extensions=1.0.0
-  - narwhals=1.31.0
+  - narwhals=2.7.0
   - nbclient=0.10.2
   - nbconvert=7.16.6
   - nbconvert-core=7.16.6
@@ -153,84 +161,89 @@ dependencies:
   - nest-asyncio=1.6.0
   - networkx=3.4.2
   - nptdms=1.10.0
-  - numexpr=2.11.0
+  - numexpr=2.14.1
   - numpy=2.2.5
   - numpy-base=2.2.5
   - numpydoc=1.9.0
-  - openjpeg=2.5.2
-  - openssl=3.0.17
+  - openjpeg=2.5.4
+  - openssl=3.0.18
   - packaging=25.0
-  - pandas=2.3.1
-  - pandoc=2.12
-  - pandocfilters=1.5.0
+  - pandas=2.3.3
+  - pandoc=3.8
+  - pandocfilters=1.5.1
   - parso=0.8.4
   - pathspec=0.12.1
-  - pcre2=10.42
+  - pcre2=10.46
   - pexpect=4.9.0
   - pickleshare=0.7.5
   - pillow=11.3.0
-  - pip=25.1
-  - pixman=0.40.0
+  - pip=25.2
+  - pixman=0.46.4
   - platformdirs=4.3.7
-  - plotly=6.0.1
+  - plotly=6.3.0
   - pluggy=1.5.0
   - ply=3.11
-  - prompt-toolkit=3.0.43
-  - prompt_toolkit=3.0.43
+  - prompt-toolkit=3.0.52
+  - prompt_toolkit=3.0.52
   - propcache=0.3.1
-  - psutil=5.9.0
+  - psutil=7.0.0
   - ptyprocess=0.7.0
-  - pure_eval=0.2.2
+  - pure_eval=0.2.3
+  - pycares=4.10.0
   - pycodestyle=2.12.1
-  - pycparser=2.21
+  - pycparser=2.23
   - pydocstyle=6.3.0
   - pyflakes=3.2.0
   - pygithub=2.4.0
   - pygments=2.19.1
   - pyjwt=2.10.1
-  - pylint=3.3.5
+  - pylint=3.3.8
   - pylint-venv=3.0.3
   - pyls-spyder=0.4.0
-  - pynacl=1.5.0
+  - pynacl=1.6.0
   - pyparsing=3.2.0
   - pyqt=5.15.10
   - pyqt5-sip=12.13.0
   - pyqtwebengine=5.15.10
-  - pysocks=1.7.1
   - python=3.10.16
   - python-dateutil=2.9.0post0
   - python-fastjsonschema=2.20.0
   - python-lsp-black=2.0.0
   - python-lsp-jsonrpc=1.1.2
-  - python-lsp-server=1.12.2
-  - python-slugify=5.0.2
+  - python-lsp-ruff=2.3.0
+  - python-lsp-server=1.13.1
+  - python-slugify=8.0.4
   - python-tzdata=2025.2
+  - python_abi=3.10
+  - pytokens=0.2.0
   - pytoolconfig=1.2.6
   - pytz=2025.2
   - pyuca=1.2
-  - pywin32=308
+  - pywin32=311
   - pywin32-ctypes=0.2.2
   - pyyaml=6.0.2
-  - pyzmq=26.2.0
+  - pyzmq=27.1.0
   - qdarkstyle=3.2.3
   - qt-main=5.15.2
   - qt-webengine=5.15.9
   - qtawesome=1.4.0
-  - qtconsole=5.6.1
-  - qtpy=2.4.1
+  - qtconsole=5.7.0
+  - qtconsole-base=5.7.0
+  - qtpy=2.4.3
   - referencing=0.30.2
-  - requests=2.32.4
+  - requests=2.32.5
   - retrying=1.3.3
-  - rich=13.9.4
+  - rich=14.2.0
   - rope=1.13.0
   - rpds-py=0.22.3
-  - rtree=1.0.1
+  - rtree=1.4.1
+  - ruff=0.12.0
   - scikit-image=0.25.2
   - scipy=1.15.3
-  - setuptools=72.1.0
+  - setuptools=80.9.0
   - sip=6.7.12
   - six=1.17.0
-  - snowballstemmer=2.2.0
+  - snowballstemmer=3.0.1
   - sortedcontainers=2.4.0
   - soupsieve=2.5
   - sphinx=7.3.7
@@ -240,45 +253,47 @@ dependencies:
   - sphinxcontrib-jsmath=1.0.1
   - sphinxcontrib-qthelp=2.0.0
   - sphinxcontrib-serializinghtml=2.0.0
-  - spyder=6.0.7
-  - spyder-kernels=3.0.5
+  - spyder=6.1.0
+  - spyder-base=6.1.0
+  - spyder-kernels=3.1.1
   - sqlite=3.50.2
-  - stack_data=0.2.0
-  - superqt=0.7.3
-  - tbb=2021.8.0
+  - stack_data=0.6.3
+  - superqt=0.7.6
+  - tbb=2022.0.0
+  - tbb-devel=2022.0.0
   - text-unidecode=1.3
   - textdistance=4.6.3
   - three-merge=0.1.1
   - tifffile=2025.2.18
   - tinycss2=1.4.0
-  - tk=8.6.14
+  - tk=8.6.15
   - tomli=2.2.1
   - tomlkit=0.13.2
   - tornado=6.5.1
   - tqdm=4.67.1
   - traitlets=5.14.3
-  - typing-extensions=4.12.2
-  - typing_extensions=4.12.2
+  - typing-extensions=4.15.0
+  - typing_extensions=4.15.0
   - tzdata=2025b
   - ucrt=10.0.22621.0
   - ujson=5.10.0
-  - unicodedata2=15.1.0
   - unidecode=1.3.8
   - urllib3=2.5.0
   - vc=14.3
   - vc14_runtime=14.44.35208
   - vs2015_runtime=14.44.35208
-  - watchdog=4.0.2
+  - watchdog=6.0.0
   - wcwidth=0.2.13
   - webencodings=0.5.1
   - werkzeug=3.0.6
-  - whatthepatch=1.0.2
+  - whatthepatch=1.0.7
   - wheel=0.45.1
   - win_inet_pton=1.1.0
+  - winloop=0.3.1
   - wrapt=1.17.0
   - xz=5.6.4
   - yaml=0.2.5
-  - yapf=0.40.2
+  - yapf=0.43.0
   - yarl=1.18.0
   - zernike=0.0.33
   - zeromq=4.3.5
@@ -287,5 +302,7 @@ dependencies:
   - zstandard=0.23.0
   - zstd=1.5.6
   - pip:
+      - bottleneck==1.4.2
+      - pysocks==1.7.1
       - qstylizer==0.2.2
 prefix: C:\Users\aless\.conda\envs\spyder_HotMicro_env
