--- a/environment.yml
+++ b/environment.yml
@@ -34,7 +34,7 @@ dependencies:
   - brotlicffi=1.0.9.2
   - bzip2=1.0.8
   - c-ares=1.34.5
-  - ca-certificates=2025.9.9
+  - ca-certificates=2025.11.4
   - cairo=1.18.4
   - cattrs=25.3.0
   - certifi=2025.10.5
@@ -59,6 +59,7 @@ dependencies:
   - dill=0.4.0
   - docstring-to-markdown=0.17
   - docutils=0.21.2
+  - et_xmlfile=2.0.0
   - exceptiongroup=1.3.0
   - executing=2.2.1
   - expat=2.7.1
@@ -166,6 +167,7 @@ dependencies:
   - numpy-base=2.2.5
   - numpydoc=1.9.0
   - openjpeg=2.5.4
+  - openpyxl=3.1.5
   - openssl=3.0.18
   - packaging=25.0
   - pandas=2.3.3
